--- a/about.html
+++ b/about.html
@@ -2,7 +2,11 @@
 <html lang="zxx">
 <head>
 	<title>radioactive11 - About </title>
-	<meta charset="UTF-8"  >
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Arijit Roy | Machine Learning | MLOps">
+  <meta name="keywords" content="radioactive11,machine learning,deep learning,computer vision,manipal university jaipur,competitive coder,flask">
+  <meta name="author" content="Arijit Roy">
 	<meta name="description" content="About Arijit Roy">
 	<meta name="keywords" content="Web Developer,young,portfoli">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
