--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,10 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Arijit Roy | Machine Learning | MLOps">
+  <meta name="keywords" content="radioactive11,machine learning,deep learning,computer vision,manipal university jaipur,competitive coder,flask">
+  <meta name="author" content="Arijit Roy">
   <title>radioactive11 - Contact</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
@@ -34,97 +38,6 @@
       </figure>
     </div>
   </div>
-    <!-- <div id="tabs__tab-dribble" class="single-tab" data-tab-name="github">
-      <div class="single-tab__header">
-        <span class="my">My</span>
-        Dribbble.
-      </div>
-      <div class="single-tab__content">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere cum sit aut quos quia temporibus officia veniam, ducimus esse non.
-        </p>
-        <a href="#" class="button hollow">Read More</a>
-      </div>
-      <figure class="singe-tab__image">
-        <img src="http://placekitten.com/180/160" alt="" />
-      </figure>
-    </div>
-    <div id="tabs__tab-behance" class="single-tab" data-tab-name="behance">
-      <div class="single-tab__header">
-        <span class="my">My</span>
-        Behance.
-      </div>
-      <div class="single-tab__content">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere cum sit aut quos quia temporibus officia veniam, ducimus esse non.
-        </p>
-        <a href="#" class="button hollow">Read More</a>
-      </div>
-      <figure class="singe-tab__image">
-        <img src="http://placekitten.com/210/150" alt="" />
-      </figure>
-    </div>
-    <div id="tabs__tab-linkedin" class="single-tab" data-tab-name="linkedin">
-      <div class="single-tab__header">
-        <span class="my">My</span>
-        LinkedIn.
-      </div>
-      <div class="single-tab__content">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere cum sit aut quos quia temporibus officia veniam, ducimus esse non.
-        </p>
-        <a href="#" class="button hollow">Read More</a>
-      </div>
-      <figure class="singe-tab__image">
-        <img src="http://placekitten.com/200/160" alt="" />
-      </figure>
-    </div>
-    <div id="tabs__tab-twitter" class="single-tab" data-tab-name="twitter">
-      <div class="single-tab__header">
-        <span class="my">My</span>
-        Twitter.
-      </div>
-      <div class="single-tab__content">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere cum sit aut quos quia temporibus officia veniam, ducimus esse non.
-        </p>
-        <a href="#" class="button hollow">Read More</a>
-      </div>
-      <figure class="singe-tab__image">
-        <img src="http://placekitten.com/220/130" alt="" />
-      </figure>
-    </div>
-    <div id="tabs__tab-instagram" class="single-tab" data-tab-name="instagram">
-      <div class="single-tab__header">
-        <span class="my">My</span>
-        Instagram.
-      </div>
-      <div class="single-tab__content">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere cum sit aut quos quia temporibus officia veniam, ducimus esse non.
-        </p>
-        <a href="#" class="button hollow">Read More</a>
-      </div>
-      <figure class="singe-tab__image">
-        <img src="http://placekitten.com/130/180" alt="" />
-      </figure>
-    </div>
-    <div id="tabs__tab-vimeo" class="single-tab" data-tab-name="vimeo">
-      <div class="single-tab__header">
-        <span class="my">My</span>
-        Vimeo.
-      </div>
-      <div class="single-tab__content">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere cum sit aut quos quia temporibus officia veniam, ducimus esse non.
-        </p>
-        <a href="#" class="button hollow">Read More</a>
-      </div>
-      <figure class="singe-tab__image">
-        <img src="http://placekitten.com/150/160" alt="" />
-      </figure>
-    </div>
-  </div> -->
   
   <div id="card__buttons">
     <ul class="menu">
