--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,10 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Arijit Roy | Machine Learning | MLOps">
+  <meta name="keywords" content="radioactive11,machine learning,deep learning,computer vision,manipal university jaipur,competitive coder,flask">
+  <meta name="author" content="Arijit Roy">
   <title>radioactive11 - Projects</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.8.13/tailwind.min.css'><link rel="stylesheet" href="css/pro.css">
 
