--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
   <div class='grid place-items-center lg:grid-cols-3 _container gap-y-10'>
   <div class="card rounded-lg px-8 py-20 relative hover:shadow-xl">
     <h2 class="name text-gray-100 text-center text-xl font-medium uppercase transition-all duration-500 opacity-0 z-10 absolute top-0 left-0 w-full">ALPR India</h2>
-    <a href="" class="buy buy-cyberpunk absolute bottom-0 bg-gray-600 text-white hover:text-black font-medium px-4 py-2 rounded-full transition-all duration-500 opacity-0 z-10 bg-white">View</a>
+    <a href="https://github.com/radioactive11/ALPR-India" class="buy buy-cyberpunk absolute bottom-0 bg-gray-600 text-white hover:text-black font-medium px-4 py-2 rounded-full transition-all duration-500 opacity-0 z-10 bg-white">View</a>
     <div class="image image-1">
       <img src="https://socialify.git.ci/radioactive11/ALPR-India/image?description=1&forks=1&language=1&owner=1&pattern=Circuit%20Board&stargazers=1&theme=Dark" alt="ALPR India" class="product rounded transition-all duration-500">  
     </div>  
@@ -26,7 +26,7 @@
   
   <div class="card rounded-lg px-8 py-20 relative hover:shadow-xl">
     <h2 class="name text-gray-100 text-center text-xl font-medium uppercase transition-all duration-500 opacity-0 z-10 absolute top-0 left-0 w-full">reZonance</h2>
-    <a href="https://store.steampowered.com/app/945360/Among_Us/" class="buy buy-among-us absolute bottom-0 bg-gray-600 hover:bg-gray-500 text-white px-4 py-2 rounded-full transition-all duration-500 opacity-0 z-10 bg-white">View</a>
+    <a href="https://github.com/radioactive11/rezonance" class="buy buy-among-us absolute bottom-0 bg-gray-600 hover:bg-gray-500 text-white px-4 py-2 rounded-full transition-all duration-500 opacity-0 z-10 bg-white">View</a>
     <div class="image image-2">
       <img src="https://socialify.git.ci/radioactive11/rezonance/image?description=1&forks=1&language=1&owner=1&pattern=Formal%20Invitation&stargazers=1&theme=Dark" alt="reZonance" class="product rounded transition-all duration-500">
     </div>
@@ -42,7 +42,7 @@
 
 <div class="card rounded-lg px-8 py-20 relative hover:shadow-xl">
   <h2 class="name text-gray-100 text-center text-xl font-medium uppercase transition-all duration-500 opacity-0 z-10 absolute top-0 left-0 w-full">Project Stonks</h2>
-  <a href="https://store.steampowered.com/app/1097150/Fall_Guys_Ultimate_Knockout/" class="buy buy-fall-guys absolute bottom-0 bg-gray-600 hover:bg-gray-500 text-white px-4 py-2 rounded-full transition-all duration-500 opacity-0 z-10 bg-white">View</a>
+  <a href="https://github.com/radioactive11/Project-Stonks" class="buy buy-fall-guys absolute bottom-0 bg-gray-600 hover:bg-gray-500 text-white px-4 py-2 rounded-full transition-all duration-500 opacity-0 z-10 bg-white">View</a>
   <div class="image image-3">
     <img src="https://socialify.git.ci/radioactive11/Project-Stonks/image?description=1&font=Inter&language=1&owner=1&pattern=Signal&stargazers=1&theme=Dark" alt="Fall Guys" class="product rounded transition-all duration-500">
   </div>
@@ -50,7 +50,7 @@
 
 <div class="card rounded-lg px-8 py-20 relative hover:shadow-xl">
   <h2 class="name text-gray-100 text-center text-xl font-medium uppercase transition-all duration-500 opacity-0 z-10 absolute top-0 left-0 w-full">Facial Expression Detection</h2>
-  <a href="https://store.steampowered.com/app/1097150/Fall_Guys_Ultimate_Knockout/" class="buy buy-fall-guys absolute bottom-0 bg-gray-600 hover:bg-gray-500 text-white px-4 py-2 rounded-full transition-all duration-500 opacity-0 z-10 bg-white">View</a>
+  <a href="https://github.com/radioactive11/Facial-Expression-Recognition" class="buy buy-fall-guys absolute bottom-0 bg-gray-600 hover:bg-gray-500 text-white px-4 py-2 rounded-full transition-all duration-500 opacity-0 z-10 bg-white">View</a>
   <div class="image image-3">
     <img src="https://socialify.git.ci/radioactive11/Facial-Expression-Recognition/image?description=1&descriptionEditable=Facial%20expression%20recognition%20aims%20to%20detect%20the%20persons%20feeling%20by%20using%20a%20video%20stream%20from%20the%20webcam&language=1&owner=1&pattern=Floating%20Cogs&stargazers=1&theme=Dark" alt="Pneumonia Detector" class="product rounded transition-all duration-500">
   </div>
@@ -58,7 +58,7 @@
 
 <div class="card rounded-lg px-8 py-20 relative hover:shadow-xl">
   <h2 class="name text-gray-100 text-center text-xl font-medium uppercase transition-all duration-500 opacity-0 z-10 absolute top-0 left-0 w-full">Pneumonia Detector</h2>
-  <a href="https://store.steampowered.com/app/1097150/Fall_Guys_Ultimate_Knockout/" class="buy buy-fall-guys absolute bottom-0 bg-gray-600 hover:bg-gray-500 text-white px-4 py-2 rounded-full transition-all duration-500 opacity-0 z-10 bg-white">View</a>
+  <a href="https://github.com/radioactive11/Pneumonia-Detector" class="buy buy-fall-guys absolute bottom-0 bg-gray-600 hover:bg-gray-500 text-white px-4 py-2 rounded-full transition-all duration-500 opacity-0 z-10 bg-white">View</a>
   <div class="image image-3">
     <img src="https://socialify.git.ci/radioactive11/Pneumonia-Detector/image?description=1&language=1&owner=1&pattern=Brick%20Wall&stargazers=1&theme=Dark" alt="Facial Expression Detection" class="product rounded transition-all duration-500">
   </div>
