--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Arijit Roy | Machine Learning | MLOps">
   <meta name="keywords" content="radioactive11,machine learning,deep learning,computer vision,manipal university jaipur,competitive coder,flask">
   <meta name="author" content="Arijit Roy">
-  <title>Arijit Roy (radioctive11)</title>
+  <title>Arijit Roy (radioactive11)</title>
   <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="css/nav.css">
 </head>
@@ -23,7 +23,7 @@
 </div>
 
 <div class="title">
-    <h3>radioctive11</h3>
+    <h3>radioactive11</h3>
     <br>
     <h1>Arijit Roy</h1>
     <br>
