--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Arijit Roy (radioctive11)</title>
+  <title>Arijit Roy (radioactive11)</title>
   <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="css/nav.css">
 </head>
@@ -19,7 +19,7 @@
 </div>
 
 <div class="title">
-    <h3>radioctive11</h3>
+    <h3>radioactive11</h3>
     <br>
     <h1>Arijit Roy</h1>
     <br>
